[project]
name = "jj-headliner-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ihor", email = "Ihor.Halaniuk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.63.0",
    "dvc-gs>=3.0.2",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
]

[project.scripts]
jj-headliner-streamlit = "jj_headliner_streamlit:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D10"]

[tool.pyright]
typeCheckingMode = "basic"
